feat: add OPENAI_COMPATIBLE protocol support to AIProtocol enum and OpenAILlmService
Added OPENAI_COMPATIBLE as a new protocol option in AIProtocol enum and updated OpenAILlmService to include it in the supported protocols list, enabling compatibility with OpenAI-compatible services.